# dark-factory-experiment

./: .gitattributes  .gitignore  CLAUDE.md  README.md
.archon/artifacts/: fix-report-pr-67.md
.archon/commands/: dark-factory-behavioral-e2e.md  dark-factory-behavioral-validation-p2.md  dark-factory-behavioral-validation.md  dark-factory-comprehensive-report.md  dark-factory-extract-pr-number.md  dark-factory-security-check-p2.md  dark-factory-security-check.md  dark-factory-synthesize-verdict.md  dark-factory-test-chat-ui.md  dark-factory-test-conversation-history.md  dark-factory-test-rag-response.md  dark-factory-test-video-ingestion.md
.archon/workflows/: dark-factory-comprehensive-test.yaml  dark-factory-validate-pr.yaml  minimax-smoke.yaml
app/backend/: config.py  main.py  pyproject.toml  requirements.txt
app/backend/auth/: dependencies.py
app/backend/db/: repository.py  schema.py  users_repo.py
app/backend/ingest/: dynamous.py  supadata_client.py
app/backend/integrations/: circle.py
app/backend/llm/: openrouter.py
app/backend/rag/: catalog.py  chunker.py  expansion.py  retriever.py  retriever_hybrid.py  selection.py  tools.py
app/backend/routes/: admin.py  auth.py  channels.py  conversations.py  ingest.py  messages.py  version.py
app/backend/scripts/: eval_retrieval.py  migrate_sqlite_to_pg.py  sync_channel.py
app/backend/services/: supadata.py  video_ingest.py  (+1 more)
app/frontend/: index.html
deploy/: .env.example  README.md  docker-compose.yml  sync-dynamous-content.sh
docs/: API.md
scripts/: pyproject.toml  transcribe_all.py
(+67 files in other folders)
